<?xml version="1.0"?>
<package format="2">
  <name>calibration_gazebo</name>
  <version>0.0.0</version>
  <description>The calibration_gazebo package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
